// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders with Modal if mode === \`modal\` 1`] = `
<DocumentFragment>
  <div
    data-testid="Modal"
  >
    <div>
      Input
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker renders with Modal if mode === \`modal\` 2`] = `
Object {
  "children": <mockConstructor
    date={2020-01-08T00:00:00.000Z}
    onChange={[MockFunction]}
    toggleDatepicker={[Function]}
    value="01/08/2020"
  />,
  "isVisible": false,
  "renderDatePickerAs": [Function],
  "toggleDatepicker": [Function],
  "wrapModalWith": [Function],
  "wrapPopoverWith": [MockFunction],
}
`;

exports[`DatePicker renders with Modal if mode === \`modal\` 3`] = `
Object {
  "date": 2020-01-08T00:00:00.000Z,
  "onChange": [MockFunction],
  "toggleDatepicker": [Function],
  "value": "01/08/2020",
}
`;

exports[`DatePicker renders with Popover by default 1`] = `
<DocumentFragment>
  <div
    data-testid="Popover"
  >
    <div>
      Input
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker renders with Popover by default 2`] = `
Object {
  "children": <mockConstructor
    date={2020-01-08T00:00:00.000Z}
    onChange={[MockFunction]}
    toggleDatepicker={[Function]}
    value="01/08/2020"
  />,
  "isVisible": false,
  "renderDatePickerAs": [Function],
  "toggleDatepicker": [Function],
  "wrapModalWith": [Function],
  "wrapPopoverWith": [MockFunction],
}
`;

exports[`DatePicker renders with Popover by default 3`] = `
Object {
  "date": 2020-01-08T00:00:00.000Z,
  "onChange": [MockFunction],
  "toggleDatepicker": [Function],
  "value": "01/08/2020",
}
`;
